setting up unison

--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
       I was a Churchill Scholar in 1985&ndash;6; Sam is the first Second-Generation Churchill Scholar.<br>
 
       Dr. Thomas Yahl just graduated with his Ph.D. in Mathematics from Texas A&amp;M.
-      His is starting a van Vleck Assistant Professorship (a prestigious postdoc) at the University of Wisconsin in
+      He is starting a van Vleck Assistant Professorship (a prestigious postdoc) at the University of Wisconsin in
       Madison.<br> 
 
       </td>
