--- a/research.html
+++ b/research.html
@@ -152,7 +152,7 @@
    <A HREF="research/publications.html">Reverse Chronological</A>&nbsp; &nbsp;
   <A HREF="http://scholar.google.com/citations?user=L-uAF0QAAAAJ&hl=en">Google Scholar</a>&nbsp; &nbsp;
    <A Href="http://arxiv.org/a/sottile_f_1">Mathematics ArXiv</A>&nbsp; &nbsp;  
-   <A Href="http://www.ams.org/mathscinet/search/author.html?mrauthid=355336">Math Reviews</A>&nbsp; &nbsp; 
+   <A Href="https://mathscinet.ams.org/mathscinet/author?authorId=355336">Math Reviews</A>&nbsp; &nbsp; 
    <!--   <A HREF="research/subject.html">By Subject</A>-->
    <br>
 <!--------------------------------------------------------------> 
