--- a/teaching/23.2/221_HW.html
+++ b/teaching/23.2/221_HW.html
@@ -20,6 +20,15 @@ Section  201
 <!----   problems/week    ------>
 <!---------------------------------------------------------------------------------------------------->
 <!---------------------------------------------------------------------------------------------------->
+<b>Second Homework (Due Thursday 31 August in recitation):</b>  &nbsp;
+Here is a <a href="221_HW/HW02.pdf">pdf</a> of the assignment and its
+<a href="221_HW/HW02.tex">LaTeX source</a> an image
+ <a href="221_HW/images/HW02_1.eps">eps<a> or <a href="221_HW/images/HW02_1.pdf">pdf<a>.
+
+<!---------------------------------------------------------------------------------------------------->
+<hr>
+<!---------------------------------------------------------------------------------------------------->
+<!---------------------------------------------------------------------------------------------------->
 <b>First Homework (Due Thursday 24 August in recitation):</b>  &nbsp;
 Here is a <a href="221_HW/HW01.pdf">pdf</a> of the assignment and its
 <a href="221_HW/HW01.tex">LaTeX source</a>.
@@ -40,7 +49,7 @@ Here is a <a href="221_HW/HW01.pdf">pdf</a> of the assignment and its
 <!---------------------------------------------------------------------------------------------------->
 <hr>
 <!---------------------------------------------------------------------------------------------------->
-<p>Last modified: Tue Aug 22 05:20:14 CDT 2023 by sottile</p>
+<p>Last modified: Sat Aug 26 16:59:28 CDT 2023 by sottile</p>
 <!---------------------------------------------------------------------------->
 <hr/>
 </BODY>
