updated some teaching files

--- a/conferences.html
+++ b/conferences.html
@@ -117,6 +117,13 @@
    Conference  June 3&ndash;7 2024, "Computational and Applied Enumerative Geometry", Fields Institute, Toronto Ontario.
  </li>
  <!---------------------------------------------------------------------------->
+ <!--------------------------------------------------------->
+ <li>
+   <a href="conferences/TAGS24/index.html">Texas Algebraic Geometry Symposium</a>,
+   Texas A&amp;M University,
+   5  &ndash; 7 April, 2024.
+ </li>
+ <!--------------------------------------------------------->
  <!---------------------------------------------------------------------------------------------------->
  <li>
    SIAM <a href="https://userweb.ucs.louisiana.edu/~C00424602/SIAMTXLA2023">TX&ndash;LA Meeting</a>,
@@ -124,29 +131,6 @@
    Minisymposium MS09: Computational nonlinear algebra.
  </li>
  <!---------------------------------------------------------------------------------------------------->
- <!--------------------------------------------------------->
- <li>
-    MAA MathFest, 2&ndash;5 August, 2023, Tampa FLorida.
- </li>
- <!--------------------------------------------------------->
- <!--------------------------------------------------------->
- <li>
-    <a href="https://fpsac.org/confs/fpsac-2023/">FPSAC 2023</a>, July 17&ndash;21, 2023, UC Davis.
- </li>
- <!--------------------------------------------------------->
- <!--------------------------------------------------------->
- <li>
-   SIAM Conference on Applied Algebraic Geometry (AG23), July 10&ndash;14, 2023, Eindhoven University of Technology, Eindhoven, The
-   Netherlands. <a href="https://www.siam.org/conferences/cm/conference/ag23">Call for Participation</a>.
-   <a href="https://www.siam.org/conferences/cm/submissions-and-deadlines/ag23-submissions-deadlines">Deadlines</a>.
- </li>
- <!--------------------------------------------------------->
- <!--------------------------------------------------------->
- <li>
-   <a href="https://sites.google.com/view/schubertsummerschool2023/home">Schubert Summer School</a>,
-   June 12&ndash;22 2023, University of Illinois.
- </li>
- <!--------------------------------------------------------->
 
 </UL>
 
