--- a/talks.html
+++ b/talks.html
@@ -130,7 +130,7 @@
   <!---------------------------------------------------------------------------------------->
   <li>
     <FONT COLOR="AA00FF"><I>TBA</I></font>
-    Proposed minisymposium on Discrete and Continuous Schr&ouml;dinger Operators, SIAM TX-LA Meeting, November 3&ndash;5,
+    Minisymposium on Discrete and Continuous Schr&ouml;dinger Operators, SIAM TX-LA Meeting, November 3&ndash;5,
     2023, University of Louisiana, Lafayette. 
    <a href="talks/23/HyperbolicSoccerballs.txt"></a> <!--&nbsp; <a href="talks/23/MathFest.pdf">text of talk</a>.-->
   </li>
@@ -138,12 +138,20 @@
   <!---------------------------------------------------------------------------------------->
   <li>
     <FONT COLOR="AA00FF"><I>TBA</I></font>
-    Proposed minisymposium on Discrete and Continuous Schr&ouml;dinger Operators, SIAM TX-LA Meeting, November 3&ndash;5, 2023, University
+   Minisymposium on Nonlinear algebra in applications, SIAM TX-LA Meeting, November 3&ndash;5, 2023, University
     of Louisiana, Lafayette. 
    <a href="talks/23/HyperbolicSoccerballs.txt"></a> <!--&nbsp; <a href="talks/23/MathFest.pdf">text of talk</a>.-->
   </li>
   <!---------------------------------------------------------------------------------------->
-  <!---------------------------------------------------------------------------------------->
+   <!---------------------------------------------------------------------------------------->
+  <li>
+    <FONT COLOR="AA00FF"><I>Critical Points Of Discrete Periodic Operators</I></font>,
+    Algebra Seminar, New Mexico State University.
+    September 22 2023,
+    <a href="talks/23/CPoDPO.txt">abstract</a>. <!--.&nbsp; <a href="talks/23/MathFest.pdf">text of talk</a>.-->
+  </li>
+ <!---------------------------------------------------------------------------------------->
+ <!---------------------------------------------------------------------------------------->
   <li>
     <FONT COLOR="AA00FF"><I>Galois groups in Enumerative Geometry and Applications</I></font>,
     Colloquium, Department of Mathematics, New Mexico State University.
@@ -153,9 +161,9 @@
  <!---------------------------------------------------------------------------------------->
  <!---------------------------------------------------------------------------------------->
   <li>
-    <FONT COLOR="AA00FF"><I>Hyperbolic Soccerballs</I></font>
-    In My Favorite Adapted Math Circle Topic, a Contributed Paper Session at the MAA Math Fest, August 2&ndash;5 2023, Tampa.
-   <a href="talks/23/HyperbolicSoccerballs.txt">Abstract</a>. <a href="talks/23/MathFest.pdf">text of talk</a>.
+    <FONT COLOR="AA00FF"><I>Some Algebraic Geometry in Applications</I></font>, Lecture to undergraduates,
+    New Mexico State University, 21 September 2023.
+   <a href="talks/23/SAGA.txt">Abstract</a>. 
   </li>
  <!---------------------------------------------------------------------------------------->
  <!---------------------------------------------------------------------------------------->
@@ -164,7 +172,14 @@
 <B><FONT SIZE=+1 color=brown>Recent Talks</FONT></B>
 <ul>
  <!---------------------------------------------------------------------------------------->
-  <!---------------------------------------------------------------------------------------->
+ <!---------------------------------------------------------------------------------------->
+  <li>
+    <FONT COLOR="AA00FF"><I>Hyperbolic Soccerballs</I></font>
+    In My Favorite Adapted Math Circle Topic, a Contributed Paper Session at the MAA Math Fest, August 2&ndash;5 2023, Tampa.
+   <a href="talks/23/HyperbolicSoccerballs.txt">Abstract</a>. <a href="talks/23/MathFest.pdf">text of talk</a>.
+  </li>
+ <!---------------------------------------------------------------------------------------->
+ <!---------------------------------------------------------------------------------------->
   <li>
     <FONT COLOR="AA00FF"><I>Welschinger Signs and the Wronskii map</I></font>,
     Minisymposium on Computational Real Algebraic Geometry,
@@ -196,7 +211,8 @@
  <!---------------------------------------------------------------------------------------->
  <!---------------------------------------------------------------------------------------->
   <li>
-   <FONT COLOR="AA00FF"><I>Some Algebraic Geometry in Applications</I></font>, Michigan State University, 27 April 2023.
+    <FONT COLOR="AA00FF"><I>Some Algebraic Geometry in Applications</I></font>, Lecture to undergraduates,
+    Michigan State University, 27 April 2023.
    <a href="talks/23/SAGA.txt">Abstract</a>. 
   </li>
  <!---------------------------------------------------------------------------------------->
