--- a/teaching/23.2/221H.html
+++ b/teaching/23.2/221H.html
@@ -185,11 +185,12 @@ Open-source <a href="http://www.gnuplot.info/">Gnuplot</a>!---------------------
  </TABLE>
 <!------------------------------------------------------------------------>
 <HR>
-<!------------------------------------------------------------------------>
-<!--Interactive <A HREF="http://www.math.umn.edu/~rogness/quadrics/">Gallery</A>
-of quadric surfaces.
+<!---------------------------------------------------------------------------------------------------->
+<A HREF="https://nathandunfield.github.io/quadrics/index.html">Interactive Gallery of quadric surfaces</A>.
 &nbsp; &nbsp; 
-<A HREF="images/hyperboloid_of_manchester.jpg">Hyperboloid of Manchester</A>.-->
+<A HREF="https://www.geogebra.org/3d?lang=en">Geogebra 3D</A>.
+&nbsp; &nbsp; 
+<A HREF="images/hyperboloid_of_manchester.jpg">Hyperboloid of Manchester</A>.
 <!--
 <BR>
 
@@ -202,8 +203,8 @@ More:
  &nbsp; &nbsp; 
 <A HREF="../07.2/Cartioid_move.gif">Dancing Cardioid</A>. 
 -->
-<!--------------------------------------------
-<HR>---------------------------->
+<!---------------------------------------------------------------------------------------------------->
+<HR>
 <!------------------------------------------------------------------------>
 The home page for Calculus: <a href="http://www.calculus.org/">Calculus.org</a>.
 
