--- a/teaching/23.2/653_HW.html
+++ b/teaching/23.2/653_HW.html
@@ -32,6 +32,7 @@
  <dd>  <a href="653_HW/HW4.pdf">Assignment 4</a> Due 26 September.</dd>
  <dd>  <a href="653_HW/HW3.pdf">Assignment 3</a> Due 19 September.</dd>
  <dd>  <a href="653_HW/HW2.pdf">Assignment 2</a> Due 12 September.</dd>-->
+ <dd>  Assignment 2: <a href="653_HW/HW02.pdf">pdf</a> <a href="653_HW/HW02.tex">LaTeX</a> Due 6 September.</dd>
  <dd>  Assignment 1: <a href="653_HW/HW01.pdf">pdf</a> <a href="653_HW/HW01.tex">LaTeX</a> Due 28 August.</dd>
 </dl>
 
