--- a/teaching/23.2/221_HW.html
+++ b/teaching/23.2/221_HW.html
@@ -20,11 +20,18 @@ Section  201
 <!----   problems/week    ------>
 <!---------------------------------------------------------------------------------------------------->
 <!---------------------------------------------------------------------------------------------------->
+<table><tr vaign=center><td><img src="../13.2/ellipsoid.png">&nbsp;</td> <td>
+   <b> Third Homework (Due Thursday 7 September):</b>  &nbsp;
+Here is a <a href="221_HW/HW03.pdf">pdf</a> of the assignment.
+   Its first page is the quadrics homework I handed out on Friday, September 1.
+</td></tr></table>
+<!---------------------------------------------------------------------------------------------------->
+<hr>
+<!---------------------------------------------------------------------------------------------------->
 <b>Second Homework (Due Thursday 31 August in recitation):</b>  &nbsp;
 Here is a <a href="221_HW/HW02.pdf">pdf</a> of the assignment and its
-<a href="221_HW/HW02.tex">LaTeX source</a> an image
- <a href="221_HW/images/HW02_1.eps">eps<a> or <a href="221_HW/images/HW02_1.pdf">pdf<a>.
-
+  <a href="221_HW/HW02.tex">LaTeX source</a> an image
+  <a href="221_HW/images/HW02_1.eps">eps<a> or <a href="221_HW/images/HW02_1.pdf">pdf<a>.
 <!---------------------------------------------------------------------------------------------------->
 <hr>
 <!---------------------------------------------------------------------------------------------------->
@@ -49,7 +56,7 @@ Here is a <a href="221_HW/HW01.pdf">pdf</a> of the assignment and its
 <!---------------------------------------------------------------------------------------------------->
 <hr>
 <!---------------------------------------------------------------------------------------------------->
-<p>Last modified: Sat Aug 26 16:59:28 CDT 2023 by sottile</p>
+<p>Last modified: Sun Sep 03 13:58:58 CDT 2023 by sottile</p>
 <!---------------------------------------------------------------------------->
 <hr/>
 </BODY>
