--- a/teaching/16.1/SymmFn.html
+++ b/teaching/16.1/SymmFn.html
@@ -74,7 +74,7 @@
  <TR>
   <TD colspan=4>               
     <I><FONT COLOR=AA00FF>Course webpage: </FONT> </I>
-    <A HREF="www.math.tamu.edu/~sottile/teaching/16.1/662.html">
+    <A HREF="http://www.math.tamu.edu/~sottile/teaching/16.1/662.html">
      <TT>www.math.tamu.edu/~sottile/teaching/16.1/662.html</TT></A>
   </TD>
  </TR>
@@ -124,7 +124,7 @@ quasisymmetric functions.
 
 <HR>
 <address></address>
-<!-- hhmts start -->Last modified: Sat Jul 27 16:26:28 CDT 2019 <!-- hhmts end -->
+<!-- hhmts start -->Last modified: Wed Jan 20 12:15:49 CST 2016 <!-- hhmts end -->
 <!---------------------------------------------------------------------------->
 <script type="text/javascript">
 var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
