--- a/teaching/09.2/251.syllabus.html
+++ b/teaching/09.2/251.syllabus.html
@@ -33,7 +33,7 @@ and cognition</a>.
           &nbsp; &nbsp; &nbsp;  <font color=red>Text-only</font> email with
            251 in the subject line, please.  </TD></TR>
   <TR><TD width=5></TD><TD><IMG SRC="../../images/dot.gif"> WWW:
-    <A HREF="/~sottile"><TT>/~sottile</TT></A></TD></TR>
+    <A HREF="/~sottile"><TT>http://www.math.tamu.edu/~sottile</TT></A></TD></TR>
   <TR><TD width=5></TD>
    <TD>
      <!--------------------------------------------------------->
