--- a/research/stories/ControlPolytope/index.html
+++ b/research/stories/ControlPolytope/index.html
@@ -2,14 +2,14 @@
 <html>
 <head>
   <title>Toric degeneration of Bezier surfaces</title>
-  <link rel="shortcut icon" href="../../images/sottile.ico"> 
-  <link href="../../images/frank.css" rel="stylesheet" type="text/css">
+  <link rel="shortcut icon" href="../../../images/sottile.ico"> 
+  <link href="../../../images/frank.css" rel="stylesheet" type="text/css">
 </head>
 <body bgcolor="#ffffff">
 <h1>Toric degeneration of B&eacute;zier surfaces</h1>
 <font size="+2"> 
-  <A HREF="http://www.shsu.edu/~ldg005">Luis Garc&iacute;a-Puente</A>, 
- <a href="http://www.math.tamu.edu/~sottile/index.html">Frank Sottile</a>,
+  <A HREF="https://luisgarciapuente.github.io/">Luis Garc&iacute;a-Puente</A>, 
+ <a href="../../../index.html">Frank Sottile</a>,
  and Zhu Chungang.
 </font><br>
 
