--- a/conferences.html
+++ b/conferences.html
@@ -129,6 +129,7 @@
    SIAM <a href="https://userweb.ucs.louisiana.edu/~C00424602/SIAMTXLA2023">TX&ndash;LA Meeting</a>,
    November 3&ndash;5, 2023, at University of Louisiana, Lafayette.<br>
    Minisymposium MS09: Computational nonlinear algebra.
+   <a href="conferences/TX-LA/index.html">Suite of related minisymposia</a>.
  </li>
  <!---------------------------------------------------------------------------------------------------->
 
