--- a/talks.html
+++ b/talks.html
@@ -129,18 +129,19 @@
    
   <!---------------------------------------------------------------------------------------->
   <li>
-    <FONT COLOR="AA00FF"><I>TBA</I></font>
+    <FONT COLOR="AA00FF"><I>Bloch Discriminants</I></font>
     Minisymposium on Discrete and Continuous Schr&ouml;dinger Operators, SIAM TX-LA Meeting, November 3&ndash;5,
     2023, University of Louisiana, Lafayette. 
-   <a href="talks/23/HyperbolicSoccerballs.txt"></a> <!--&nbsp; <a href="talks/23/MathFest.pdf">text of talk</a>.-->
+    <a href="talks/23/BlochDiscriminants.txt">abstract</a>
+    <!--&nbsp; <a href="talks/23/MathFest.pdf">text of talk</a>.-->
   </li>
   <!---------------------------------------------------------------------------------------->
   <!---------------------------------------------------------------------------------------->
   <li>
-    <FONT COLOR="AA00FF"><I>TBA</I></font>
+    <FONT COLOR="AA00FF"><I>Welschinger Signs and the Wronskii map</I></font>
    Minisymposium on Nonlinear algebra in applications, SIAM TX-LA Meeting, November 3&ndash;5, 2023, University
     of Louisiana, Lafayette. 
-   <a href="talks/23/HyperbolicSoccerballs.txt"></a> <!--&nbsp; <a href="talks/23/MathFest.pdf">text of talk</a>.-->
+   <a href="talks/23/SIAM_AG.txt">abstract</a> <!--&nbsp; <a href="talks/23/MathFest.pdf">text of talk</a>.-->
   </li>
   <!---------------------------------------------------------------------------------------->
    <!---------------------------------------------------------------------------------------->
