--- a/teaching/08.2/221.html
+++ b/teaching/08.2/221.html
@@ -40,7 +40,7 @@ Section  501
           &nbsp; &nbsp; &nbsp;  <font color=red>Text-only</font> email with
            221 in the subject line, please.  </TD></TR>
   <TR><TD width=5></TD><TD><IMG SRC="../../images/dot.gif"> WWW:
-    <A HREF="/~sottile"><TT>/~sottile</TT></A></TD></TR>
+    <A HREF="../../index.html"><TT>sottile</TT></A></TD></TR>
   <TR><TD width=5></TD>
    <TD>
      <!--------------------------------------------------------->
@@ -236,7 +236,7 @@ Some other
    Please also answer the following questions:<BR>
    &nbsp; &nbsp; (1) Why are you taking this course?<BR>
    &nbsp; &nbsp; (2) What do you hope to get out of this course?<BR>
-   &nbsp; &nbsp; (3) Is there anything else that you want to tell me (that
+   &nbsp; &nbsp; (3) Is there anything else that you want to tell me (that 
         is relevant to the course)?<BR>
  <!--<FONT COLOR=red>  Second Assignment </FONT> (Due Wednesday 5 September at the start of
    class):  The 36 problems from Sections 11.1, 11.2, and 11.3 listed 
