--- a/teaching/11.2/221_HW.html
+++ b/teaching/11.2/221_HW.html
@@ -165,11 +165,10 @@ G:= Guichard's Calculus
 <b>Third Homework (Due Friday 23 September):</b><br>
 <table>
  <tr valign="center">
-  <td><img src="deriv.png"></td><td> Visual Partial Derivatives Homework <a
-  href="Derivs.pdf">Here</a></td> 
+  <td><img src="deriv.png"></td><td> Visual Partial Derivatives Homework <a href="Derivs.pdf">Here</a></td> 
  </tr>
  <tr valign="top">
-  <td>G Section 14.3</td>
+  <td>G Section 14.3</td> 
   <td width=650> #s 1, 2, 7, 8, 9, 11, 12, 14, 15, 17.
   </td>
  </tr>
