--- a/teaching/23.2/221H.html
+++ b/teaching/23.2/221H.html
@@ -98,9 +98,11 @@ Open-source <a href="http://www.gnuplot.info/">Gnuplot</a>!---------------------
    <TR><TD><FONT COLOR=AA00FF><B>Recitations</B>:</FONT></TD>
           <TD> &Theta; 8:25&ndash;9:15 Blocker 122</TD>
    </TR>
- <!--<TR valign=top><TD><FONT COLOR=AA00FF><B>Help Sessions</B>:</FONT></TD>
-       <TD>Sunday&mdash;Thursday 8&ndash;10 PM  BLOC 169</TD>
-   </TR> -->
+ <TR valign=top><TD><FONT COLOR=AA00FF><B>Help Sessions</B>:</FONT></TD>
+   <TD>Mondays and Wednesdays 7:15&ndash;9:00 PM  BLOC 126<br>
+       Tuesdays and Thursdays 5:00&ndash;7:00 PM  BLOC 126
+   </TD>
+   </TR> 
  </TABLE>
  <!------------------------------------------------------------------------>
  </TD><TD width=20></TD>
@@ -203,6 +205,10 @@ More:
  &nbsp; &nbsp; 
 <A HREF="../07.2/Cartioid_move.gif">Dancing Cardioid</A>. 
 -->
+<!---------------------------------------------------------------------------------------------------->
+<HR>
+<!---------------------------------------------------------------------------------------------------->
+Some <a href="../18.1/pdfs/partial_derivatives.pdf">notes on partial derivatives and Clairaut's Theorem</a>.
 <!---------------------------------------------------------------------------------------------------->
 <HR>
 <!------------------------------------------------------------------------>
