--- a/conferences/TX-LA/index.html
+++ b/conferences/TX-LA/index.html
@@ -25,24 +25,25 @@
 &nbsp;&nbsp;   <font color=blue><b><a href="#MS14">MS14: Nonlinear Algebra in Applications</a></b></font>.
    &nbsp;  Julia Lindberg (The University of Texas at Austin) and Jordy Lopez Garcia (Texas A&amp;M University)<br>
 
+
+ &nbsp;&nbsp;  <font color=blue><b><a href="#MS15">MS15: Combinatorial Commutative Algebra</a></b></font>.
+   &nbsp; Anton Dochtermann (Texas State University)<br>
+
 &nbsp;&nbsp;   <font color=blue><b><a href="#MS16">MS16: Combinatorial Algebraic Geometry and Rigidity Theory</a></b></font>.
    &nbsp;  Daniel Irving Bernstein (Tulane) and Kalina Mincheva (Tulane)<br>
 
 &nbsp;&nbsp;   <font color=blue><b><a href="#MS18">MS18: Algebraic Combinatorics and Parking Functions</a></b></font>.
    &nbsp; Nathan Williams (University of Texas at Dallas) <br>
 
- &nbsp;&nbsp;  <font color=blue><b><a href="#MSXX">Combinatorial Commutative Algebra</a></b></font>.
-   &nbsp; Anton Dochtermann (Texas State University)<br>
-
-
- &nbsp;&nbsp;  <font color=blue><b><a href="#MSYY">Coding theory and Cryptography</a>xs</b></font>.
+ &nbsp;&nbsp;  <font color=blue><b><a href="#MS22">MS22: Coding theory and Cryptography</a>xs</b></font>.
    &nbsp; Henry Chimal-Dzul,  (Notre Dame) and Alperen Ergur (UTSA) and Jingbo Liu (TAMU San Antonio)}<br>
 
 <!---------------------------------------------------------------------------------->
 <HR>
 <!------------------------------------------------------------------------------------>
 <a name="MS06"></a>
-<font size=+2 color=blue>Minisymposium on Applications of Combinatorial and Computational Algebraic Geometry<</font><br>
+<font size=+2 color=blue>MS06: Minisymposium on Applications of Combinatorial and Computational Algebraic Geometry</font><br>
+<!--  Saturday (11/4) 1:30 pm - 3:30 pm, Saturday (11/4) 3:45 pm - 4:45 pm, Sunday (11/5) 09:45 am - 10:45 am.-->
 <font size=+1 color=brown><b>Speakers:</b></font>
 <table>
 <!---------------------------------------------------------------------------->
@@ -88,7 +89,8 @@
 <HR>
 <!------------------------------------------------------------------------------------>
 <a name="MS09"></a>
-<font size=+2 color=blue>Minisymposium on Computational Nonlinear Algebra</font><br>
+<font size=+2 color=blue>MS09: Minisymposium on Computational Nonlinear Algebra</font><br>
+<!-- Time: Saturday (11/4) 1:30 pm - 3:30 pm, Sunday (11/5) 11:00 am - 1:00 pm. -->
 <font size=+1 color=brown><b>Speakers:</b></font>
 <table>
 <!---------------------------------------------------------------------------->
@@ -125,7 +127,8 @@
 <HR>
 <!------------------------------------------------------------------------------------>
 <a name="MS14"></a>
-<font size=+2 color=blue>Minisymposium on Nonlinear Algebra in Applications</font><br>
+<font size=+2 color=blue>MS14: Minisymposium on Nonlinear Algebra in Applications</font><br>
+<!-- Time: Friday (11/3) 3:00 pm - 5:00 pm, Saturday (11/4) 9:45 am - 11:45 am. -->
 <font size=+1 color=brown><b>Speakers:</b></font>
 <table>
 <!---------------------------------------------------------------------------->
@@ -166,11 +169,30 @@
  </tr>
 <!---------------------------------------------------------------------------->
 </table>
+
+<!---------------------------------------------------------------------------------->
+<HR>
+<!------------------------------------------------------------------------------------>
+<a name="<MS15"></a>
+<font size=+2 color=blue>MS15: Minisymposium on Combinatorial Commutative Algebra</font><br>
+<!-- Time: Saturday (11/4) 1:30 pm - 3:30 pm, Saturday (11/4) 3:45 pm - 4:45 pm, Sunday (11/5) 09:45 am - 10:45 am, Sunday (11/5) 11:00 am - 1:00 pm.-->
+<font size=+1 color=brown><b>Speakers:</b></font>
+<table>
+<!---------------------------------------------------------------------------->
+ <TR>  <td width=30></td>
+  <TD>, 
+     <font color="FF00AA"><i></i></font>
+  </TD>
+ </tr>
+<!---------------------------------------------------------------------------->
+</table>
+
 <!---------------------------------------------------------------------------------->
 <HR>
 <!------------------------------------------------------------------------------------>
 <a name="MS16"></a>
-<font size=+2 color=blue>Minisymposium on Combinatorial Algebraic Geometry and Rigidity Theory</font><br>
+<font size=+2 color=blue>MS16: Minisymposium on Combinatorial Algebraic Geometry and Rigidity Theory</font><br>
+<!-- Time: Friday (11/3) 3:00 pm - 5:00 pm, Saturday (11/4) 9:45 am - 11:45 am, Saturday (11/4) 1:30 pm - 3:30 pm.-->
 <font size=+1 color=brown><b>Speakers:</b></font>
 <table>
 <!---------------------------------------------------------------------------->
@@ -186,7 +208,27 @@
 <HR>
 <!------------------------------------------------------------------------------------>
 <a name="MS18"></a>
-<font size=+2 color=blue>Minisymposium on Algebraic Combinatorics and Parking Functions</font><br>
+<font size=+2 color=blue>MS18: Minisymposium on Algebraic Combinatorics and Parking Functions</font><br>
+<!-- Time: Saturday (11/4) 1:30 pm - 3:30 pm, Saturday (11/4) 3:45 pm - 4:45 pm, Sunday (11/5) 09:45 am - 10:45 am.  -->
+<font size=+1 color=brown><b>Speakers:</b></font>
+<table>
+<!---------------------------------------------------------------------------->
+ <TR>  <td width=30></td>
+  <TD>, 
+     <font color="FF00AA"><i></i></font>
+  </TD>
+ </tr>
+<!---------------------------------------------------------------------------->
+</table>
+
+
+<!---------------------------------------------------------------------------------->
+<HR>
+<!------------------------------------------------------------------------------------>
+<a name="MS22"></a>
+<font size=+2 color=blue>MS22: Minisymposium on Coding theory and Cryptography</font><br>
+<!-- Time: Saturday (11/4) 1:30 pm - 3:30 pm, Saturday (11/4) 3:45 pm - 4:45 pm, Sunday (11/5) 09:45 am - 10:45 am, Sunday (11/5) 11:00 am - --
+      1:00 pm. -->
 <font size=+1 color=brown><b>Speakers:</b></font>
 <table>
 <!---------------------------------------------------------------------------->
@@ -201,39 +243,7 @@
 <!---------------------------------------------------------------------------------->
 <HR>
 <!------------------------------------------------------------------------------------>
-<a name="<MSXX"></a>
-<font size=+2 color=blue>Minisymposium on Combinatorial Commutative Algebra</font><br>
-<font size=+1 color=brown><b>Speakers:</b></font>
-<table>
-<!---------------------------------------------------------------------------->
- <TR>  <td width=30></td>
-  <TD>, 
-     <font color="FF00AA"><i></i></font>
-  </TD>
- </tr>
-<!---------------------------------------------------------------------------->
-</table>
 
-<!---------------------------------------------------------------------------------->
-<HR>
-<!------------------------------------------------------------------------------------>
-<a name="MXYY"></a>
-<font size=+2 color=blue>Minisymposium on Coding theory and Cryptography</font><br>
-<font size=+1 color=brown><b>Speakers:</b></font>
-<table>
-<!---------------------------------------------------------------------------->
- <TR>  <td width=30></td>
-  <TD>, 
-     <font color="FF00AA"><i></i></font>
-  </TD>
- </tr>
-<!---------------------------------------------------------------------------->
-</table>
-
-<!---------------------------------------------------------------------------------->
-<HR>
-<!------------------------------------------------------------------------------------>
-
-<p>Last modified: Mon Sep 04 17:40:10 CDT 2023 by sottile</p>  
+<p>Last modified: Fri Sep 15 15:32:44 CDT 2023 by sottile</p>  
  </body>
 </html> </body> </html>
