--- a/teaching/23.2/221_HW.html
+++ b/teaching/23.2/221_HW.html
@@ -20,6 +20,19 @@ Section  201
 <!----   problems/week    ------>
 <!---------------------------------------------------------------------------------------------------->
 <!---------------------------------------------------------------------------------------------------->
+<b>Fiftt Homework (Due Thursday 21 August in recitation):</b>  &nbsp;
+Here is a <a href="221_HW/HW05.pdf">pdf</a> of the assignment and its
+<a href="221_HW/HW05.tex">LaTeX source</a>.
+<!---------------------------------------------------------------------------------------------------->
+<hr>
+<!---------------------------------------------------------------------------------------------------->
+<table><tr vaign=center><td><img src="../11.2/deriv.png">&nbsp;</td> <td>
+   <b> Fourth Homework (Due Thursday 14 September):</b>  &nbsp;
+Here is a <a href="221_HW/HW04.pdf">pdf</a> of the assignment.
+</td></tr></table>
+<!---------------------------------------------------------------------------------------------------->
+<hr>
+<!---------------------------------------------------------------------------------------------------->
 <table><tr vaign=center><td><img src="../13.2/ellipsoid.png">&nbsp;</td> <td>
    <b> Third Homework (Due Thursday 7 September):</b>  &nbsp;
 Here is a <a href="221_HW/HW03.pdf">pdf</a> of the assignment.
@@ -56,7 +69,7 @@ Here is a <a href="221_HW/HW01.pdf">pdf</a> of the assignment and its
 <!---------------------------------------------------------------------------------------------------->
 <hr>
 <!---------------------------------------------------------------------------------------------------->
-<p>Last modified: Sun Sep 03 13:58:58 CDT 2023 by sottile</p>
+<p>Last modified: Sat Sep 09 15:30:47 CDT 2023 by sottile</p>
 <!---------------------------------------------------------------------------->
 <hr/>
 </BODY>
