--- a/teaching/23.2/653_HW.html
+++ b/teaching/23.2/653_HW.html
@@ -1,22 +1,12 @@
 <HTML><HEAD><TITLE>Homework for Math 663</TITLE></HEAD>
 <BODY BGCOLOR="#FFFFFF"  alink="#FFFFFF">
 <A NAME="top"></A>
-<H2>Autumn 2017<BR>
+<H2>Autumn 2023<BR>
  Math 653: Graduate Algebra I
 </H2>
 <h2><font color=blue>Homework Assignments</font>
 </H2>
 
-<hr>
-<!------------------------------------------------------------------------->
-<dl>
-  <dd>
-    <font size=+1 color=red>Homework assignments will be give in class and also from this page in .pdf</font><br>
-    <font size=+1>If you want my .tex code, just ask.</font><br>
-    
-
-   </dd>
-</dl>
 
 <!------------------------------------------------------------------------->
 <hr>
@@ -26,12 +16,10 @@
  <dd>  <a href="653_HW/HW10.pdf">Assignment 10</a> Due 14 November.</dd>
  <dd>  <a href="653_HW/HW9.pdf">Assignment 9</a> Due 7 November.</dd>
  <dd>  <a href="653_HW/HW8.pdf">Assignment 8</a> Due 31 October.</dd>
- <dd>  <a href="653_HW/HW7.pdf">Assignment 7</a> Due 24 October.</dd>
- <dd>  <a href="653_HW/HW6.pdf">Assignment 6</a> Due 17 October.</dd>
- <dd>  <a href="653_HW/HW5.pdf">Assignment 5</a> Due 3 October.</dd>
- <dd>  <a href="653_HW/HW4.pdf">Assignment 4</a> Due 26 September.</dd>
- <dd>  <a href="653_HW/HW3.pdf">Assignment 3</a> Due 19 September.</dd>
- <dd>  <a href="653_HW/HW2.pdf">Assignment 2</a> Due 12 September.</dd>-->
+ <dd>  <a href="653_HW/HW7.pdf">Assignment 7</a> Due 24 October.</dd>-->
+ <dd>  Assignment 5: <a href="653_HW/HW05.pdf">pdf</a> <a href="653_HW/HW05.tex">LaTeX</a> Due 25 September.</dd>
+ <dd>  Assignment 4: <a href="653_HW/HW04.pdf">pdf</a> <a href="653_HW/HW04.tex">LaTeX</a> Due 18 September.</dd>
+ <dd>  Assignment 3: <a href="653_HW/HW03.pdf">pdf</a> <a href="653_HW/HW03.tex">LaTeX</a> Due 11 September.</dd>
  <dd>  Assignment 2: <a href="653_HW/HW02.pdf">pdf</a> <a href="653_HW/HW02.tex">LaTeX</a> Due 6 September.</dd>
  <dd>  Assignment 1: <a href="653_HW/HW01.pdf">pdf</a> <a href="653_HW/HW01.tex">LaTeX</a> Due 28 August.</dd>
 </dl>
