--- a/research/stories/coAmoeba/index.html
+++ b/research/stories/coAmoeba/index.html
@@ -9,8 +9,7 @@
 <h1>CoAmoebae in 3-space</h1>
 <font size="+2"> 
  Mounir Nisse and 
- <a href="/~sottile/index.html">Frank
-Sottile</a>
+ <a href="../../../index.html">Frank Sottile</a>
 </font><br>
 <font size="+1">
 A <i>coamoeba</i> is the image of a subvariety of the torus
