--- a/teaching/23.2/221H.html
+++ b/teaching/23.2/221H.html
@@ -107,7 +107,7 @@ Open-source <a href="http://www.gnuplot.info/">Gnuplot</a>!---------------------
  <!------------------------------------------------------------------------>
  </TD><TD width=20></TD>
    <TD align=left width=300>
-       <IMG SRC="../06.2/stewart.jpg"></TD>
+       <IMG SRC="../images/stewart.jpg"></TD>
 </TR></TABLE>
 
 <!------------------------------------------------------------------------>
@@ -307,7 +307,7 @@ Important class policies and required legal disclaimers are found <a href="Polic
 <!------------------------------------------------------------------------>
 <HR>
 <!---------------------------------------------------------------------------->
-<p>Last modified: Wed Aug 23 22:02:11 CDT 2023 by sottile</p>  
+<p>Last modified: Wed Sep 20 03:21:59 CDT 2023 by sottile</p>  
  </body>
 </html> 
 
