--- a/teaching/23.2/221_HW.html
+++ b/teaching/23.2/221_HW.html
@@ -26,14 +26,14 @@ Here is a <a href="221_HW/HW05.pdf">pdf</a> of the assignment and its
 <!---------------------------------------------------------------------------------------------------->
 <hr>
 <!---------------------------------------------------------------------------------------------------->
-<table><tr vaign=center><td><img src="../11.2/deriv.png">&nbsp;</td> <td>
+<table><tr vaign=center><td><img src="../images/deriv.png">&nbsp;</td> <td>
    <b> Fourth Homework (Due Thursday 14 September):</b>  &nbsp;
 Here is a <a href="221_HW/HW04.pdf">pdf</a> of the assignment.
 </td></tr></table>
 <!---------------------------------------------------------------------------------------------------->
 <hr>
 <!---------------------------------------------------------------------------------------------------->
-<table><tr vaign=center><td><img src="../13.2/ellipsoid.png">&nbsp;</td> <td>
+<table><tr vaign=center><td><img src="../images/ellipsoid.png">&nbsp;</td> <td>
    <b> Third Homework (Due Thursday 7 September):</b>  &nbsp;
 Here is a <a href="221_HW/HW03.pdf">pdf</a> of the assignment.
    Its first page is the quadrics homework I handed out on Friday, September 1.
@@ -69,7 +69,7 @@ Here is a <a href="221_HW/HW01.pdf">pdf</a> of the assignment and its
 <!---------------------------------------------------------------------------------------------------->
 <hr>
 <!---------------------------------------------------------------------------------------------------->
-<p>Last modified: Sat Sep 09 15:30:47 CDT 2023 by sottile</p>
+<p>Last modified: Wed Sep 20 03:22:56 CDT 2023 by sottile</p>
 <!---------------------------------------------------------------------------->
 <hr/>
 </BODY>
