--- a/teaching/23.2/Syllabus.html
+++ b/teaching/23.2/Syllabus.html
@@ -110,7 +110,7 @@ This includes links to University-wide policies.</font>
  <!------------------------------------------------------------------------>
  </TD><TD width=20></TD>
    <TD align=left width=300>
-       <IMG SRC="../06.2/stewart.jpg" alt="cover of text"></TD>
+       <IMG SRC="images/stewart.jpg" alt="cover of text"></TD>
 </TR></TABLE>
 
 <!------------------------------------------------------------------------>
@@ -410,6 +410,6 @@ Hotline (800-273-8255) or at <a title="Suicide Prevention" href="https://suicide
 
 <!------------------------------------------------------------------------>
 <HR>
-<p>Last modified: Wed Aug 23 21:56:11 CDT 2023 by sottile</p>
+<p>Last modified: Wed Sep 20 11:20:52 CDT 2023 by sottile</p>
 </BODY>
 </HTML>
