--- a/talks.html
+++ b/talks.html
@@ -144,20 +144,35 @@
    <a href="talks/23/SIAM_AG.txt">abstract</a> <!--&nbsp; <a href="talks/23/MathFest.pdf">text of talk</a>.-->
   </li>
   <!---------------------------------------------------------------------------------------->
-   <!---------------------------------------------------------------------------------------->
+ <!---------------------------------------------------------------------------------------->
+  <li>
+    <FONT COLOR="AA00FF"><I>Galois groups in Enumerative Geometry</I></font>,
+    Graduate Student Organization Seminar, Texas A&ap;M University.
+    September 28 2023,
+    <a href="talks/23/GSO.txt">Abstract</a>. <!--&nbsp; <a href="talks/23/MathFest.pdf">text of talk</a>.-->
+  </li>
+ <!---------------------------------------------------------------------------------------->
+ <!---------------------------------------------------------------------------------------->
+  <li>
+    <FONT COLOR="AA00FF"><I>Galois groups in Enumerative Geometry</I></font>,
+    Invited talk, <a href="https://img.iyte.edu.tr/en/home-page/">İzmir Mathematics Days V</a>.
+    September 28 2023,
+    <a href="talks/23/NMSU_Colloq.txt">Abstract</a>. <!--&nbsp; <a href="talks/23/MathFest.pdf">text of talk</a>.-->
+  </li>
+ <!---------------------------------------------------------------------------------------->
+  <li>
+    <FONT COLOR="AA00FF"><I>Galois groups in Enumerative Geometry</I></font>,
+    Colloquium, Department of Mathematics, New Mexico State University.
+    September 22 2023,
+    <a href="talks/23/NMSU_Colloq.txt">Abstract</a>. <!--&nbsp; <a href="talks/23/MathFest.pdf">text of talk</a>.-->
+  </li>
+ <!---------------------------------------------------------------------------------------->
+  <!---------------------------------------------------------------------------------------->
   <li>
     <FONT COLOR="AA00FF"><I>Critical Points Of Discrete Periodic Operators</I></font>,
     Algebra Seminar, New Mexico State University.
     September 22 2023,
     <a href="talks/23/CPoDPO.txt">abstract</a>. <!--.&nbsp; <a href="talks/23/MathFest.pdf">text of talk</a>.-->
-  </li>
- <!---------------------------------------------------------------------------------------->
- <!---------------------------------------------------------------------------------------->
-  <li>
-    <FONT COLOR="AA00FF"><I>Galois groups in Enumerative Geometry and Applications</I></font>,
-    Colloquium, Department of Mathematics, New Mexico State University.
-    September 22 2023,
-    <a href="talks/23/GGEGA.txt">Abstract</a>. <!--&nbsp; <a href="talks/23/MathFest.pdf">text of talk</a>.-->
   </li>
  <!---------------------------------------------------------------------------------------->
  <!---------------------------------------------------------------------------------------->
