--- a/teaching/23.2/221_HW.html
+++ b/teaching/23.2/221_HW.html
@@ -20,7 +20,13 @@ Section  201
 <!----   problems/week    ------>
 <!---------------------------------------------------------------------------------------------------->
 <!---------------------------------------------------------------------------------------------------->
-<b>Fiftt Homework (Due Thursday 21 August in recitation):</b>  &nbsp;
+<b>Sixth Homework (Due Thursday 28 September in recitation):</b>  &nbsp;
+Here is a <a href="221_HW/HW06.pdf">pdf</a> of the assignment and its
+<a href="221_HW/HW06.tex">LaTeX source</a>.
+<!---------------------------------------------------------------------------------------------------->
+<hr>
+<!---------------------------------------------------------------------------------------------------->
+<b>Fifth Homework (Due Thursday 21 August in recitation):</b>  &nbsp;
 Here is a <a href="221_HW/HW05.pdf">pdf</a> of the assignment and its
 <a href="221_HW/HW05.tex">LaTeX source</a>.
 <!---------------------------------------------------------------------------------------------------->
@@ -69,7 +75,7 @@ Here is a <a href="221_HW/HW01.pdf">pdf</a> of the assignment and its
 <!---------------------------------------------------------------------------------------------------->
 <hr>
 <!---------------------------------------------------------------------------------------------------->
-<p>Last modified: Wed Sep 20 03:22:56 CDT 2023 by sottile</p>
+<p>Last modified: Sun Sep 24 20:15:10 CDT 2023 by sottile</p>
 <!---------------------------------------------------------------------------->
 <hr/>
 </BODY>
