--- a/conferences/Pi2015/index.html
+++ b/conferences/Pi2015/index.html
@@ -133,7 +133,7 @@ and <a href="../../index.html">Frank Sottile</a>.
 <hr>
 Supported by the <a href="http://www.math.tamu.edu/">Department of Mathematics</a>, Texas A&amp;M University.
 <hr>
-<img height=50pt src="../PiDay2010/Pi1.jpg"><img height=50pt src="../PiDay2010/Pi2.jpg"><img height=50pt src="../PiDay2010/Pi3.jpg"><img height=50pt src="../PiDay2010/Pi4.jpg"><img height=50pt src="../PiDay2010/Pi5.jpg"><img height=50pt src="../PiDay2010/Pi6.jpg"><img height=50pt src="../PiDay2010/Pi7.jpg"><img height=50pt src="../PiDay2010/dotsc.jpg">
+<img height=50pt src="../../research/stories/PiDay2010/Pi1.jpg"><img height=50pt src="../../research/stories/PiDay2010/Pi2.jpg"><img height=50pt src="../../research/stories/PiDay2010/Pi3.jpg"><img height=50pt src="../../research/stories/PiDay2010/Pi4.jpg"><img height=50pt src="../../research/stories/PiDay2010/Pi5.jpg"><img height=50pt src="../../research/stories/PiDay2010/Pi6.jpg"><img height=50pt src="../../research/stories/PiDay2010/Pi7.jpg"><img height=50pt src="../../research/stories/PiDay2010/dotsc.jpg">
 <hr>
 
 <address></address>
