--- a/research/stories/index.html
+++ b/research/stories/index.html
@@ -56,7 +56,7 @@
 
 
 <!----- March 2015 ----------->
-<A href="Pi2015/index.html"><img BORDER=2 src="Pi2015/Photos/Pi2015.jpg"></a>
+<A href="../../conferences/Pi2015/index.html"><img BORDER=2 src="../../conferences/Pi2015/Photos/Pi2015.jpg"></a>
 
 
 <!----- July 2012 ----------->
